implemented JWT interceptor, repository controller, and CSRF token for session management

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Server",
+            "name": "PortfolioAPIs: Debug Server",
             "type": "node",
             "request": "attach",
             "restart": true,
