--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express-promise-router": "^3.0.3",
     "http-errors": "^1.7.2",
     "http-status-codes": "^1.3.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
